templates/vendor-xapi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "integrations"
  labels:
    name: "${instance_name:=integrations}"
