templates/vendor-xapi/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  namespace: integrations
  labels:
    app: activemq
spec:
  type: ClusterIP
  ports:
  - name: stomp
    port: 61613
    targetPort: stomp
    protocol: TCP
  - name: web-console
    port: 8161
    targetPort: web-console
    protocol: TCP
  selector:
    app: activemq
