templates/vendor-xapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendor-xapi
  namespace: integrations
  labels:
    app: vendor-xapi
spec:
  type: ClusterIP
  selector:
    app: vendor-xapi
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
